Revert "fixing alignment related to flexbox header update"
This reverts commit 6305415af27fd95aed5740436a6401e89331b41f.

--- a/assets/stylesheets/tagging.scss
+++ b/assets/stylesheets/tagging.scss
@@ -90,6 +90,7 @@ header .discourse-tag {color: scale-color($header_primary, $lightness: 50%) !imp
 
 .bullet + .list-tags {
   display: block;
+  padding-top: 5px;
 }
 
 .bar + .list-tags {
